bugfix > remove href="#" from preview link to avoid scroll jump > add check for "preview" param not false to avoid toggling preview on when post submitted > resolve preview/edit mode not working properly

--- a/skins/base/base.css
+++ b/skins/base/base.css
@@ -21,7 +21,7 @@ z-index order reference:
 
 
 /* Links */
-a {text-decoration:none}
+a {text-decoration:none; cursor:pointer}
 a:hover {text-decoration:underline}
 
 
